[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-nodes"
version = "0.1.0"
description = "Custom nodes for ComfyUI"
requires-python = ">=3.8"
dependencies = ["torch>=2.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=nodes --cov-report=term-missing"

[tool.coverage.run]
source = ["nodes"]
omit = ["*/tests/*"]